# zandronum-launcher

./: Cargo.toml  README.md  com.github.ZandronumLauncher.desktop  com.github.ZandronumLauncher.gresource.xml  com.github.ZandronumLauncher.gschema.xml  compile-gresource.bash  zandronum-launcher.desktop
app/: com.github.ZandronumLauncher.gresource  iwads.json  zandronum-launcher.py
app/config/: zandronum.ini
app/ui/: cheats.ui  filedialogbutton.ui  headermenu.ui  main.ui  preferences.ui  shortcutwindow.ui  window.ui
resources/: com.github.ZandronumLauncher.gresource.xml
resources/gtk/: help-overlay.ui
resources/ui/: cheat-label-item.ui  cheat-value-item.ui  cheats.ui  filerow.ui  preferences.ui  window.ui
scripts/: zandronum-launcher.py  zandronum-launcher.ui
scripts/config/: zandronum.ini
src/: app.rs  cheat_object.rs  cheats_window.rs  file_select_row.rs  iwad_combo_row.rs  iwad_object.rs  main.rs  preferences_window.rs  window.rs
src/resources/: resources.gresource.xml
src/resources/gtk/: help-overlay.ui
src/resources/ui/: cheats_window.ui  file_select_row.ui  iwad_combo_row.ui  preferences_window.ui  window.ui
src/resources/ui/iwad_combo/: entry-item.ui
ui/: cheats.ui  dialogselectrow.ui  filerow.ui  iwad-list-item.ui  preferences.ui  window.ui
