[package]
name = "zandronum-launcher"
version = "2.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.4.4", package = "libadwaita", features = ["v1_3"] }
gio = { version = "0.17.10", features = ["v2_76"] }
glob = "0.3.1"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
shellexpand = "3.1.0"
shlex = "1.1.0"

[build-dependencies]
glib-build-tools = "0.17.10"
