[package]
name = "zandronum-launcher"
version = "2.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
gio = { version = "0.18.2", features = ["v2_76"] }
glob = "0.3.1"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
shellexpand = "3.1.0"
shlex = "1.2.0"

[build-dependencies]
glib-build-tools = "0.18.0"
