[package]
name = "zandronum-launcher"
version = "2.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
gio = { version = "0.19.4", features = ["v2_80"] }
glob = "0.3.1"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_14"] }
shellexpand = "3.1.0"
shlex = "1.3.0"

[build-dependencies]
glib-build-tools = "0.19.0"
